--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.7.2",
     "expo": "~51.0.14",
+    "expo-secure-store": "^13.0.1",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-hook-form": "^7.52.0",
